[workspace]
members = [
    "snapshot-parser",
    "snapshot-parser-validator-cli",
    "snapshot-parser-tokens-cli",
]
resolver = "1"


[profile.release]
codegen-units = 1
lto = "fat"
overflow-checks = true

[profile.release.build-override]
codegen-units = 1
incremental = false
opt-level = 3

[workspace.dependencies]
ahash = "0.8.12"
borsh = { version = "1", features = ["derive"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
base64 = "0.22.1"
bs58 = "0.5.1"
bincode = "1.3.3"
clap = { version = "4.1.11", features = ["derive", "env"] }
env_logger = "0.11.10"
indicatif = { version = "0.18.4"}
log = "0.4.29"
mpl-token-metadata = "5.1.0"
spl-token = { version = "9.0.0" }
rusqlite = { version = "0.39.0", features = ["bundled", "fallible_uint"] }
serde = "1.0.228"
serde_json = "1.0.149"
shellexpand = "3.1.2"
snapshot-parser = { path = "./snapshot-parser" }
agave-snapshots = "=3.1.11"
solana-genesis-utils = "=3.1.11"
solana-ledger = { version = "=3.1.11", features = ["agave-unstable-api"] }
solana-native-token = "=3.0.0"
solana-program = "=3.0.0"
solana-runtime = "=3.1.11"
solana-sdk = "=3.0.0"
solana-accounts-db = "=3.1.11"
solana-stake-interface = "=2.0.2"
tokio = { version = "1", features = ["full"] }
