[[bin]]
name = "snapshot-parser-tokens-cli"
path = "src/bin/cli.rs"

[package]
name = "snapshot-parser-tokens-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
anchor-lang = {workspace = true }
anyhow = { workspace = true }
async-trait = {workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
indicatif = { workspace = true }
log = { workspace = true }
mpl-token-metadata = { workspace = true }
rusqlite = {workspace = true }
serde = { workspace = true }
snapshot-parser = { workspace = true }
solana-accounts-db = { workspace = true }
solana-program = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
tokio = { workspace = true }

[patch.crates-io]
ahash = { package = "ahash", version = "^0.8.10" }
