[[bin]]
name = "snapshot-parser-validator-cli"
path = "src/bin/cli.rs"

[package]
name = "snapshot-parser-validator-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
snapshot-parser = { workspace = true }
snapshot-parser-types = { workspace = true }
solana-runtime = { workspace = true }
solana-accounts-db = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }


[patch.crates-io]
ahash = { package = "ahash", version = "^0.8.10" }
