[[bin]]
name = "snapshot-parser-cli"
path = "src/bin/cli.rs"

[package]
name = "snapshot-parser"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snapshot-parser-types = { workspace = true }
# solana-client = { workspace = true }
# solana-ledger = { workspace = true }
# solana-program = { workspace = true }
# solana-runtime = { workspace = true }
# solana-sdk = { workspace = true }
# solana-accounts-db = { workspace = true }
tokio = { workspace = true }

# ahash-new = { package = "ahash", version = "^0.8.10" }
solana-cost-model = "=2.0.13"
solana-client = "=2.0.13"
solana-ledger = "=2.0.13"
solana-program = "=2.0.13"
solana-runtime = "=2.0.13"
solana-sdk = "=2.0.13"
solana-accounts-db = "=2.0.13"

[patch.crates-io]
ahash = { package = "ahash", version = "^0.8.10" }
