[package]
name = "snapshot-parser"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
solana-ledger = { workspace = true }
solana-program = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-accounts-db = { workspace = true }

[patch.crates-io]
ahash = { package = "ahash", version = "^0.8.10" }
